# numericalintegration

./: README.md  numericalintegration.cabal  stack.yaml
CPP/: integration.cpp
src/: Integration.hs
src-exec/: Main.hs
